--- a/templates/add.html
+++ b/templates/add.html
@@ -14,6 +14,7 @@
     }
 
     body {
+      background: url('Todo.webp') no-repeat center center/cover;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
       background-color: #f7f7f7;
       color: #333;
